# see-log

./: .gitignore  Cargo.toml  README.md  test.txt
client/: Cargo.toml
client/src/: lib.rs  main.rs
client/src/common/: mod.rs
client/src/service/: file_service.rs  mod.rs  test.txt
server/: Cargo.toml
server/src/: main.rs
server/src/handle/: catcher_handle.rs  mod.rs
server/src/route/: mod.rs
server/src/service/: log_service.rs
server/src/test/: closure_test.rs  mod.rs  new_type_test.rs  reqwest_test.rs
src/: lib.rs  main.rs
src/entity/: log_file.rs  mod.rs
src/enums/: common.rs
src/handle/: catcher_handle.rs  mod.rs
src/route/: health_route.rs  log_route.rs  mod.rs
src/service/: log_service.rs
src/test/: closure_test.rs  file_test.rs  file_util_test.rs  format_test.rs  match_test.rs  mod.rs  num_test.rs  rc_test.rs  xml_test.rs
src/utils/: file_util.rs  mod.rs
