[package]
name = "see-log"
version = "0.1.0"
edition = "2021"

[source.crates-io]
replace-with = 'ustc'

[source.ustc]
registry = "git://mirrors.ustc.edu.cn/crates.io-index"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
salvo = { version = "*", features = ["logging"] }
tokio = { version = "*", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
ferris-says = "*"
num = "0.4.0"