[package]
edition = "2021"
name = "see-log"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
ferris-says = "*"
num = "0.4.0"
ring = "0.16.20"
tracing = "0.1"
tracing-subscriber = "0.3"
salvo = { version = "*", features = ["logging"] }
tokio = { version = "*", features = ["macros"] }
