[package]
edition = "2021"
name = "see-log"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
ferris-says = "0.3.1"
num = "0.4.1"
ring = "0.16.20"
salvo = {version = "0.49.0", features = ["logging", "oapi"]}
tokio = {version = "1.29.1", features = ["macros"]}
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
