[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salvo = { version = "*", features = ["sse"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "*", features = ["macros"] }
tokio-stream = "0.1.11"
futures-util = "0.3.25"
hotwatch = "0.4.6"