[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salvo = { version = "*", features = ["logging"] }
tokio = { version = "*", features = ["macros"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
tracing = "0.1"
tracing-subscriber = "0.3"
ferris-says = "*"